[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/Enemies.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/Ubuntu-Normal-UI-16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Music/Chiptronical.ogg" type="AudioStream" id=3]
[ext_resource path="res://World/World.gd" type="Script" id=4]
[ext_resource path="res://UI/Fonts/Emoji.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Fonts/Ubuntu-R.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/mouse_control.png" type="Texture" id=7]
[ext_resource path="res://World/HUD.gd" type="Script" id=8]
[ext_resource path="res://UI/Blip4.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 600, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 1000 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 800 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.501961 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
resource_name = "alarm"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Energy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.0941176, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AlarmPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Energy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 6 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_right = 480

[node name="GarbageCollector" type="Area2D" parent="."]
position = Vector2( 0, 675 )
rotation = -3.14159
__meta__ = {
"_edit_group_": true
}

[node name="South" type="CollisionShape2D" parent="GarbageCollector"]
position = Vector2( -240, 0 )
shape = SubResource( 1 )

[node name="North" type="CollisionShape2D" parent="GarbageCollector"]
position = Vector2( -268.769, 1843.18 )
shape = SubResource( 1 )

[node name="West" type="CollisionShape2D" parent="GarbageCollector"]
position = Vector2( 146.364, 872.26 )
shape = SubResource( 2 )

[node name="East" type="CollisionShape2D" parent="GarbageCollector"]
position = Vector2( -623.597, 872.262 )
shape = SubResource( 2 )

[node name="Enemies" type="Node" parent="."]
script = ExtResource( 1 )

[node name="SideWalls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="SideWalls" groups=[
"walls",
]]
collision_layer = 3
collision_mask = 3

[node name="West" type="CollisionShape2D" parent="SideWalls/StaticBody2D"]
position = Vector2( -30, 0 )
shape = SubResource( 3 )

[node name="East" type="CollisionShape2D" parent="SideWalls/StaticBody2D"]
position = Vector2( 510, 0 )
shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="GameOver" type="Control" parent="HUD"]
pause_mode = 2
visible = false
margin_left = 120.842
margin_top = 200.0
margin_right = 160.842
margin_bottom = 240.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/GameOver"]
margin_top = 1.0
margin_right = 240.0
margin_bottom = 191.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="HUD/GameOver"]
margin_left = 1.07768
margin_top = 16.0694
margin_right = 241.078
margin_bottom = 53.0694
custom_fonts/font = SubResource( 5 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastedForLabel" type="Label" parent="HUD/GameOver"]
margin_left = 0.735092
margin_top = 63.5425
margin_right = 240.735
margin_bottom = 82.5425
custom_fonts/font = ExtResource( 2 )
text = "You lasted for:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD/GameOver"]
margin_left = 1.08275
margin_top = 83.9116
margin_right = 241.083
margin_bottom = 111.912
custom_fonts/font = ExtResource( 2 )
text = "99 minutes and 30 seconds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="HUD/GameOver"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 173.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOver/Container"]
margin_left = 91.0
margin_right = 148.0
margin_bottom = 50.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="HUD/GameOver/Container/VBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
text = "Restart"

[node name="QuitButton" type="Button" parent="HUD/GameOver/Container/VBoxContainer"]
margin_top = 30.0
margin_right = 57.0
margin_bottom = 50.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Control" parent="HUD"]
pause_mode = 2
visible = false
margin_left = 120.842
margin_top = 111.0
margin_right = 160.842
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/NewGame"]
margin_right = 240.0
margin_bottom = 346.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUD/NewGame"]
margin_left = 1.07768
margin_top = 16.0694
margin_right = 241.078
margin_bottom = 53.0694
custom_fonts/font = SubResource( 5 )
text = "Fusion Flier"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickToStart" type="Label" parent="HUD/NewGame"]
margin_top = 71.0
margin_right = 240.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Click to start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tips" type="Label" parent="HUD/NewGame"]
margin_left = 41.0
margin_top = 112.0
margin_right = 186.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 2 )
text = "- avoid enemies
- watch your energy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goal" type="Label" parent="HUD/NewGame"]
margin_top = 172.0
margin_right = 240.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 2 )
text = "For how long can you last?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseControl" type="Sprite" parent="HUD/NewGame"]
position = Vector2( 118.574, 254.959 )
scale = Vector2( 0.440442, 0.440442 )
texture = ExtResource( 7 )

[node name="ControlX" type="Label" parent="HUD/NewGame"]
margin_top = 307.0
margin_right = 240.0
margin_bottom = 326.0
custom_fonts/font = ExtResource( 2 )
text = "X key switches rockets/bomb"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire" type="Label" parent="HUD/NewGame"]
margin_left = 76.9157
margin_top = 222.409
margin_right = 116.916
margin_bottom = 241.409
custom_fonts/font = ExtResource( 2 )
text = "fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thrust" type="Label" parent="HUD/NewGame"]
margin_left = 132.543
margin_top = 221.928
margin_right = 175.543
margin_bottom = 240.928
custom_fonts/font = ExtResource( 2 )
text = "thrust"

[node name="Paused" type="Control" parent="HUD"]
pause_mode = 2
visible = false
margin_left = 120.0
margin_top = 214.0
margin_right = 360.0
margin_bottom = 371.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/Paused"]
anchor_left = 0.167
anchor_right = 0.833
anchor_bottom = 0.994
margin_left = -0.0800056
margin_right = 0.0799713
margin_bottom = -0.0579987
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUD/Paused"]
margin_left = 1.07768
margin_top = 16.0694
margin_right = 241.078
margin_bottom = 53.0694
custom_fonts/font = SubResource( 5 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="HUD/Paused"]
margin_left = 87.9812
margin_top = 67.3534
margin_right = 151.981
margin_bottom = 137.353
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="HUD/Paused/HBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "Resume"

[node name="RestartButton2" type="Button" parent="HUD/Paused/HBoxContainer"]
margin_top = 25.0
margin_right = 64.0
margin_bottom = 45.0
text = "Restart"

[node name="QuitButton2" type="Button" parent="HUD/Paused/HBoxContainer"]
margin_top = 50.0
margin_right = 64.0
margin_bottom = 70.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameHUD" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameHUD"]
margin_left = 13.465
margin_top = 573.39
margin_right = 173.465
margin_bottom = 623.39
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD/GameHUD/VBoxContainer"]
margin_top = -1.0
margin_right = 160.0
margin_bottom = 21.5882
custom_fonts/font = ExtResource( 5 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="Label" parent="HUD/GameHUD/VBoxContainer"]
margin_top = 29.0
margin_right = 160.0
margin_bottom = 51.5882
custom_fonts/font = ExtResource( 5 )

[node name="animation" type="AnimationPlayer" parent="HUD/GameHUD/VBoxContainer"]
anims/alarm = SubResource( 6 )
anims/default = SubResource( 7 )

[node name="Score" type="Label" parent="HUD/GameHUD"]
margin_left = 420.754
margin_top = 590.444
margin_right = 460.754
margin_bottom = 627.444
grow_horizontal = 0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlarmPlayer" type="AudioStreamPlayer" parent="HUD/GameHUD"]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
[connection signal="body_entered" from="GarbageCollector" to="." method="_on_GarbageCollector_body_entered"]
[connection signal="pressed" from="HUD/GameOver/Container/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="HUD/GameOver/Container/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HUD/Paused/HBoxContainer/Resume" to="HUD" method="_on_Resume_pressed"]
[connection signal="pressed" from="HUD/Paused/HBoxContainer/RestartButton2" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="HUD/Paused/HBoxContainer/QuitButton2" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
